--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,8 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//js.leapmotion.com/leap-0.4.2.min.js"></script>
+    <script src="js/processing-1.4.1.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/processing-1.4.1.min.js"></script>
     <script>
       var app = new AliveApplication();
       app.run();
