--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//js.leapmotion.com/leap-0.4.2.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/howler/1.1.11/howler.min.js"></script>
     <script src="js/processing-1.4.1.js"></script>
     <script src="js/app.js"></script>
     <script>
